1998-06-27  Markus Wuebben <markus@kde.org>

	* kmcomposewin.cpp (applyChanges): add false to applyChanges to
	avoid segfault on ALPHAs.

1998-06-24  Stefan Taferner  <taferner@kde.org>

	* Pgp detection simplified and bugfixed.

	* Folder status messages for index creation and
	compacting folder reduced from every 100th to every 10th.

1998-06-23  Markus Wuebben  <markus@kde.org> (KMail-0.7.7)

	* removed various unnecessary assert()s. and replaced them
	with if()s. Especially in functions that return void this
	is very helpfull and makes kmail more stable.

	* Checked return values with if()s for some functions to
	make sure that we run into to trouble with those problems.
	
1998-06-23  Stefan Taferner  <taferner@kde.org> (KMail-0.7.7)

	* Removed lots of old debug messages.

	* Composer: answering the confirmation is no longer
	ignored.

	* Finetuning: added missing pixmaps to makefile and
	repainted pixmap for queued and sent messages.

	* Composer: changed behaviour of email completion a bit.
	Now it is possible to add multiple recipients with comma
	separated and complete also those after the first one.
	Drawback: email addresses with comma in them are not
	handled properly currently.

	* Pop leave-on-server: due to the fact that we need another
	field in the pop settings dialog "download-all-msgs"
	the leave-on-server checkbox currently also toggles
	the download-all-msgs feature.
	So:  download-all-msgs = !leave-on-server

	* Folders are now marked red after download if they
	contain new or unread messages. As a feature, folders
 	that receive old messages are not marked.

	* Fixed problems in pop code downloading old messages
	also. The "download" dialog is a bit misleading because
	it should say now "checking message:" instead of
	"downloading message:" because old messages are counted
	here also.

1998-06-22  Markus Wuebben  <markus@kde.org> (KMail-0.7.6)

	* fixed a whole bunch of stuff that made kmail segfault.
